[package]
name = "set-time"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"

[target.'cfg(windows)'.dependencies]
windows-sys = {version = "0.61", features = ["Win32_System_SystemInformation"]}

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]

[workspace]
members = ["set-time-cli"]
