[package]
name = "set-time"
version = "0.1.0"
edition = "2024"
authors = ["@Exotik850"]
description = "A Rust library for setting the system time on Windows and Unix-like systems."
license = "MIT"
keywords = ["time", "datetime", "windows", "unix"]

[dependencies]
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = {version = "0.61", features = ["Win32_System_SystemInformation"]}

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[workspace]
members = ["set-time-cli"]
